--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
     font-family: "Inter", sans-serif;
     margin: 0;
     color: var(--text-color);
+    box-sizing: border-box;
 }
 
 :root {
     --body-color: #f5f5f5;
     --element-bg-color: #fff;
     --text-color: #000;
+    --border-color: #bbb;
 }
 
 body {
@@ -18,4 +20,51 @@ header {
     background-color: var(--element-bg-color);
     width: 100%;
     position: fixed;
+    padding: 0 15rem;
+    height: 6rem;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--border-color);
+    z-index: 2; 
+    top: 0;
+}
+
+#header-content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main {
+    margin-top: 8rem;
+    padding: 0 20rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 10rem 10rem;
+    grid-template-areas: 
+    "big big small1"
+    "big big small2";
+    gap: 1rem;
+}
+
+main div {
+    border-radius: 10px;
+    border: 1px solid var(--border-color);
+    background-color: var(--element-bg-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#big-box {
+    grid-area: big
+}
+
+#small1 {
+    grid-area: small1;
+}
+
+#small2 {
+    grid-area: small2;
 }
